--- a/src/GVB/Modulos/Menu/Vista/Ventana_Us.form
+++ b/src/GVB/Modulos/Menu/Vista/Ventana_Us.form
@@ -285,34 +285,43 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Component id="jPanel1" min="-2" pref="100" max="-2" attributes="0"/>
-              <EmptySpace min="220" pref="220" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="Imagen" min="-2" pref="70" max="-2" attributes="0"/>
-                  <Component id="Usuario" min="-2" pref="70" max="-2" attributes="0"/>
-                  <Component id="LogOut" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="jPanel1" min="-2" pref="100" max="-2" attributes="0"/>
+                      <EmptySpace min="220" pref="220" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="Imagen" min="-2" pref="60" max="-2" attributes="0"/>
+                          <Component id="Usuario" min="-2" pref="70" max="-2" attributes="0"/>
+                          <Component id="LogOut" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="100" pref="100" max="-2" attributes="0"/>
+                      <Component id="jLabel3" min="-2" pref="240" max="-2" attributes="0"/>
+                  </Group>
               </Group>
+              <EmptySpace min="40" max="32767" attributes="0"/>
           </Group>
-          <Group type="102" attributes="0">
-              <EmptySpace min="100" pref="100" max="-2" attributes="0"/>
-              <Component id="jLabel3" min="-2" pref="240" max="-2" attributes="0"/>
-          </Group>
-          <Component id="jLabel1" min="-2" pref="404" max="-2" attributes="0"/>
+          <Component id="jLabel1" alignment="0" pref="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jPanel1" min="-2" pref="300" max="-2" attributes="0"/>
+          <Component id="jPanel1" alignment="0" max="32767" attributes="0"/>
           <Group type="102" attributes="0">
               <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-              <Component id="Imagen" min="-2" pref="70" max="-2" attributes="0"/>
+              <Component id="Imagen" min="-2" pref="60" max="-2" attributes="0"/>
               <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
               <Component id="Usuario" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace min="160" pref="160" max="-2" attributes="0"/>
               <Component id="LogOut" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
-          <Component id="jLabel3" min="-2" pref="300" max="-2" attributes="0"/>
-          <Component id="jLabel1" min="-2" pref="300" max="-2" attributes="0"/>
+          <Group type="102" alignment="1" attributes="0">
+              <Component id="jLabel3" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+          </Group>
+          <Component id="jLabel1" alignment="0" pref="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -330,6 +339,9 @@
             </Property>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="10" y="11" width="81" height="69"/>
@@ -344,6 +356,9 @@
             <Property name="borderPainted" type="boolean" value="false"/>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="10" y="117" width="80" height="69"/>
@@ -352,7 +367,6 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnAbout">
           <Properties>
-            <Property name="text" type="java.lang.String" value="About"/>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
           <Constraints>
