--- a/src/GVB/Modulos/Menu/Vista/Ventana_Us.form
+++ b/src/GVB/Modulos/Menu/Vista/Ventana_Us.form
@@ -365,10 +365,14 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JButton" name="btnAbout">
+        <Component class="javax.swing.JButton" name="btnPed">
           <Properties>
+            <Property name="text" type="java.lang.String" value="Historial"/>
             <Property name="opaque" type="boolean" value="false"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="10" y="220" width="81" height="69"/>
